# LotteryLab

./: .gitignore  README.md  SECURITY.md  pyproject.toml  requirements.txt
.claude/: launch.json
.github/: dependabot.yml
.streamlit/: config.toml
app/: __init__.py  main.py  shared.py
app/views/: data.py  ev.py  frequency.py  overview.py  prove.py  simulator.py  wheel.py
data/raw/eurodreams/: 2026-06-06__fdj-combined.csv  2026-06-12__fdj-combined.csv
data/raw/euromillions/: 2026-06-06__fdj-combined.csv  2026-06-12__fdj-combined.csv
data/raw/megamillions/: 2026-06-06__ba426c60.csv  2026-06-12__70e8581a.csv
data/raw/powerball/: 2026-06-06__4bb36340.csv  2026-06-12__344c66c5.csv
lotterylab/: __init__.py  __main__.py  adapters.py  analytics.py  backtest.py  baseline.py  cli.py  combinatorics.py  ev.py  games.py  schema.py  simulate.py  store.py  strategy.py  synth.py  validate.py  wheeling.py
tests/: test_adapters.py  test_app.py  test_backtest.py  test_combinatorics.py  test_validity.py  test_wheeling.py
