[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lotterylab"
version = "0.1.0"
description = "An honest statistical sandbox for lottery analysis: prove nothing predicts a fair draw, then engineer guaranteed low-tier hits with covering designs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
lotterylab = "lotterylab.cli:main"

[tool.setuptools]
packages = ["lotterylab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
